Fixed transitions. Added more arrow to about text.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="container" id="about">
     <div class="row about">
       <div class="col-md-12">
-        <p class="text-center">The Able Few is a St. Louis, MO and Indianapolis, IN based company that provides technology consulting for early stage startups and specializes in solving complex problems revolving around consuming, processing, and analyzing large sets of data using <strong>Ruby on Rails</strong>, <strong>Storm</strong>, and <strong>Elasticsearch</strong>.</p>
+        <p class="text-center">The Able Few is a St. Louis, MO and Indianapolis, IN based company that provides technology consulting for early stage startups and specializes in solving complex problems revolving around consuming, processing, and analyzing large sets of data using <strong>Ruby on Rails</strong>, <strong>Storm</strong>, and <strong>Elasticsearch</strong>.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
       </div>
     </div>
 
