--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="jumbo-content">
         <h1 id="logo">the able few</h1>
-        <p>creative development from the Midcoast&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        <h2 id="tag">creative development from the Midcoast&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></h2>
       </div>
     </div>
   </div>
@@ -75,6 +75,12 @@
     </footer>
   </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+  <script src="js/vendor/jquery.fittext.js"></script>
+
+  <script>
+    $("#logo").fitText(0.6, { minFontSize: '65px', maxFontSize: '100px' });
+    $("#tag").fitText(1.9, { minFontSize: '19px', maxFontSize: '40px' });
+  </script>
 
   <script src="js/vendor/bootstrap.min.js"></script>
 
