Starting on open source section.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,20 @@
     </div>
   </div>
 
+  <div class="container" id="open_source">
+    <div class="row">
+      <div class="col-md-4">
+        <h2><a href="https://github.com/theablefew/porcelain" target="_blank">Porcelain</a></h2>
+      </div>
+      <div class="col-md-4">
+        <h2><a href="https://github.com/theablefew/porcelain" target="_blank">Porcelain</a></h2>
+      </div>
+      <div class="col-md-4">
+        <h2><a href="https://github.com/theablefew/porcelain" target="_blank">Porcelain</a></h2>
+      </div>
+    </div>
+  </div>
+
   <hr>
 
   <div class="container">
