Open source section.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   </div>
 
   <div class="container" id="about">
-    <div class="row about">
+    <div class="row">
       <div class="col-md-12">
-        <p class="text-center">The Able Few is a St. Louis, MO and Indianapolis, IN based company that provides technology consulting for early stage startups and specializes in solving complex problems revolving around consuming, processing, and analyzing large sets of data using <strong>Ruby on Rails</strong>, <strong>Storm</strong>, and <strong>Elasticsearch</strong>.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        <p class="lead-in">The Able Few is a St. Louis, MO and Indianapolis, IN based company that provides technology consulting for early stage startups and specializes in solving complex problems revolving around consuming, processing, and analyzing large sets of data using <strong>Ruby on Rails</strong>, <strong>Storm</strong>, and <strong>Elasticsearch</strong>.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
       </div>
     </div>
 
@@ -69,14 +69,26 @@
 
   <div class="container" id="open_source">
     <div class="row">
-      <div class="col-md-4">
-        <h2><a href="https://github.com/theablefew/porcelain" target="_blank">Porcelain</a></h2>
+      <div class="col-md-12">
+        <p class="lead-in">A lot of what we do was impossible, once. We try to give back where we can.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
       </div>
-      <div class="col-md-4">
-        <h2><a href="https://github.com/theablefew/porcelain" target="_blank">Porcelain</a></h2>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <h2><a href="https://github.com/theablefew/locutus" target="_blank">Locutus</a></h2>
+        <p>JavaScript-based engine to render the DOM in canvas.</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <h2><a href="https://github.com/theablefew/porcelain" target="_blank">Porcelain</a></h2>
+        <p>Dead-simple chart rendering API for D3.js with self-discovering DOM elements.</p>
+      </div>
+      <div class="col-md-3">
+        <h2><a href="https://github.com/theablefew/goodyear" target="_blank">Goodyear</a></h2>
+        <p>An ActiveRecord-like query interface for Elasticsearch.</p>
+      </div>
+      <div class="col-md-3">
+        <h2><a href="https://github.com/theablefew/gnip-rules" target="_blank">Gnip Rules</a></h2>
+        <p>A quick and easy way to manage your rules via Gnip Rules API.</p>
       </div>
     </div>
   </div>
