--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <div class="container" id="contact">
     <div class="row">
       <div class="col-md-12">
-        <p class="lead-in">Need someone to talk to? We're here for you.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        <p class="lead-in">Need someone to talk to? We are here for you.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
       </div>
     </div>
     <div class="row">
