Content and style clean-up.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="container" id="about">
     <div class="row">
       <div class="col-md-12">
-        <p class="lead-in">The Able Few is a St. Louis, MO and Indianapolis, IN based company that provides technology consulting for early stage startups and specializes in solving complex problems revolving around consuming, processing, and analyzing large sets of data using <strong>Ruby on Rails</strong>, <strong>Storm</strong>, and <strong>Elasticsearch</strong>.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        <p class="lead-in">The Able Few provides technology consulting for early stage startups and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data using <strong>Ruby on Rails</strong>, <strong>Storm</strong>, and <strong>Elasticsearch</strong>.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
       </div>
     </div>
 
@@ -67,10 +67,12 @@
     </div>
   </div>
 
+  <hr>
+
   <div class="container" id="open_source">
     <div class="row">
       <div class="col-md-12">
-        <p class="lead-in">A lot of what we do was impossible, once. We try to give back where we can.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        <p class="lead-in">A lot of what we do seemed impossible at one time. We do our best to give back where we can.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
       </div>
     </div>
     <div class="row">
@@ -93,6 +95,8 @@
     </div>
   </div>
 
+  <hr>
+
   <div class="container" id="contact">
     <div class="row">
       <div class="col-md-12">
@@ -105,7 +109,7 @@
         <p>(314) 600-5473</p>
         <h3>Indianapolis, IN</h3>
         <p>(317) 572-7083</p>
-        <p>info[at]theablefew[dot]com</p>
+        <p class="able_email"><a href="mailto:info@theablefew.com" target="_blank">info[at]theablefew[dot]com</a></p>
       </div>
       <div class="col-md-9">
         <form role="form">
@@ -125,7 +129,7 @@
             <label for="body">What's on your mind?</label>
             <textarea class="form-control" rows="3" id="body" placeholder="Do tell…"></textarea>
           </div>
-          <button type="submit" class="btn btn-default">Send</button>
+          <button type="submit" class="btn btn-default btn-block">Send</button>
         </form>
       </div>
     </div>
@@ -135,7 +139,7 @@
 
   <div class="container">
     <footer>
-      <p class="text-center">&copy; The Able Few 2014</p>
+      <p>&copy; The Able Few 2014</p>
     </footer>
   </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
