--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="container" id="open_source">
     <div class="row">
       <div class="col-md-12">
-        <p class="lead-in">A lot of what we do seemed impossible at one time. We do our best to give back where we can.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        <p class="lead-in">A lot of what we do, at one time, seemed impossible. We do our best to give back where we can.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
       </div>
     </div>
     <div class="row">
@@ -146,8 +146,8 @@
   <script src="js/vendor/jquery.fittext.js"></script>
 
   <script>
-    $("#logo").fitText(1.2, { minFontSize: '50px', maxFontSize: '100px' });
-    $("#tag").fitText(2.2, { minFontSize: '14px', maxFontSize: '40px' });
+    $("#logo").fitText(1.2, { minFontSize: '55px', maxFontSize: '100px' });
+    $("#tag").fitText(2.2, { minFontSize: '15px', maxFontSize: '40px' });
   </script>
 
   <script src="js/vendor/bootstrap.min.js"></script>
