--- a/index.html
+++ b/index.html
@@ -141,13 +141,14 @@
     <footer>
       <p>&copy; The Able Few 2014</p>
     </footer>
-  </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  </div> <!-- /container -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
   <script src="js/vendor/jquery.fittext.js"></script>
 
   <script>
-    $("#logo").fitText(1.2, { minFontSize: '55px', maxFontSize: '100px' });
-    $("#tag").fitText(2.2, { minFontSize: '15px', maxFontSize: '40px' });
+    $("#logo").fitText(1.2, { minFontSize: '54px', maxFontSize: '100px' });
+    $("#tag").fitText(2.2, { minFontSize: '14px', maxFontSize: '40px' });
   </script>
 
   <script src="js/vendor/bootstrap.min.js"></script>
