Fixed conflicting margins.

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     <div class="row">
       <div class="col-md-3">
         <h3>Saint Louis, MO</h3>
-        <p>(314) 600-5473</p>
+        <p class="able_phone">(314) 600-5473</p>
         <h3>Indianapolis, IN</h3>
-        <p>(317) 572-7083</p>
+        <p class="able_phone">(317) 572-7083</p>
         <p class="able_email"><a href="mailto:info@theablefew.com" target="_blank">info[at]theablefew[dot]com</a></p>
       </div>
       <div class="col-md-9">
