--- a/index.html
+++ b/index.html
@@ -72,6 +72,30 @@
   <div class="container" id="open_source">
     <div class="row">
       <div class="col-md-12">
+        <p class="lead-in">While we are always open to new types of adventure, perhaps we could partner wih you on one or more of the following things?&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <h2>Technology Consulting</h2>
+        <p>For the bulk of our customers we serve as their entire technology team on an on-going basis. We help design their products, architect complex solutions to their problems, and advocate on their behalf with other partners and vendors.</p>
+      </div>
+      <div class="col-md-4">
+        <h2>Custom Software Development</h2>
+        <p>Either in taking over development on existing applications or starting a brand new project together, we consistently deliver products that push the boundaries of what is possible.</p>
+      </div>
+      <div class="col-md-4">
+        <h2>Elasticsearch Consulting/Support</h2>
+        <p>With great experience in wielding massive database clusters that contain billions of records (and counting), we can help you dramatically improve how you manage and utilize Elasticsearch for your own projects.</p>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container" id="open_source">
+    <div class="row">
+      <div class="col-md-12">
         <p class="lead-in">A lot of what we do, at one time, seemed impossible. We do our best to give back where we can.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
       </div>
     </div>
