--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </div>
   </div>
-
+<div class="wrapper">
   <div class="container" id="about">
     <div class="row">
       <div class="col-md-12">
@@ -166,6 +166,7 @@
       <p>&copy; The Able Few 2014</p>
     </footer>
   </div> <!-- /container -->
+</div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
   <script src="js/vendor/jquery.fittext.js"></script>
