Added project images.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,38 @@
         <p class="lead-in">A lot of what we do, at one time, seemed impossible. We do our best to give back where we can.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
       </div>
     </div>
+    <div class="row projects">
+      <div class="col-md-2">
+        <div class="member">
+          <img src="img/projects1.jpg">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="member">
+          <img src="img/projects2.jpg">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="member">
+          <img src="img/projects3.jpg">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="member">
+          <img src="img/projects4.jpg">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="member">
+          <img src="img/projects5.jpg">
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="member">
+          <img src="img/projects6.jpg">
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="col-md-3">
         <h2><a href="https://github.com/theablefew/locutus" target="_blank">Locutus</a></h2>
