Spencer-requested copy changes.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="jumbo-content">
         <h1 id="logo">the able few</h1>
         <h2 id="tag">creative development from the Midcoast&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></h2>
+        <p class="visible-xs header_phone">Saint Louis: (314) 600-5473 | Indianapolis: (317) 572-7083</p>
       </div>
     </div>
   </div>
@@ -44,25 +45,25 @@
         <div class="member">
           <img src="http://yix.io/images/jasenka-shot.gif">
         </div>
-        <h4>Spencer Markowski</h4>
+        <h4>Spencer Markowski <small>Partner</small></h4>
       </div>
       <div class="col-md-3">
         <div class="member">
           <img src="http://yix.io/images/jenny-shot.gif">
         </div>
-        <h4>Iouri Kostine</h4>
+        <h4>Iouri Kostine <small>Partner</small></h4>
       </div>
       <div class="col-md-3">
         <div class="member">
           <img src="http://yix.io/images/tiffany-shot.gif">
         </div>
-        <h4>Michael Tomko</h4>
+        <h4>Michael Tomko <small>Production Director</small></h4>
       </div>
       <div class="col-md-3">
         <div class="member">
           <img src="http://yix.io/images/jostin-shot.gif">
         </div>
-        <h4>Jason Luebke</h4>
+        <h4>Jason Luebke <small>UX/JavaScript</small></h4>
       </div>
     </div>
   </div>
@@ -81,11 +82,11 @@
         <p>For the bulk of our customers we serve as their entire technology team on an on-going basis. We help design their products, architect complex solutions to their problems, and advocate on their behalf with other partners and vendors.</p>
       </div>
       <div class="col-md-4">
-        <h2>Custom Software Development</h2>
-        <p>Either in taking over development on existing applications or starting a brand new project together, we consistently deliver products that push the boundaries of what is possible.</p>
+        <h2>Custom Software</h2>
+        <p>Whether you would like us to start a brand new project with you, or support your existing application, we consistently deliver products that push the boundaries of what is possible.</p>
       </div>
       <div class="col-md-4">
-        <h2>Elasticsearch Consulting/Support</h2>
+        <h2>Elasticsearch Consulting</h2>
         <p>With great experience in wielding massive database clusters that contain billions of records (and counting), we can help you dramatically improve how you manage and utilize Elasticsearch for your own projects.</p>
       </div>
     </div>
@@ -104,31 +105,37 @@
         <div class="member">
           <img src="img/projects1.jpg">
         </div>
+        <br />
       </div>
       <div class="col-md-2">
         <div class="member">
           <img src="img/projects2.jpg">
         </div>
+        <br />
       </div>
       <div class="col-md-2">
         <div class="member">
           <img src="img/projects3.jpg">
         </div>
+        <br />
       </div>
       <div class="col-md-2">
         <div class="member">
           <img src="img/projects4.jpg">
         </div>
+        <br />
       </div>
       <div class="col-md-2">
         <div class="member">
           <img src="img/projects5.jpg">
         </div>
+        <br />
       </div>
       <div class="col-md-2">
         <div class="member">
           <img src="img/projects6.jpg">
         </div>
+        <br />
       </div>
     </div>
     <div class="row">
