--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="jumbo-content">
         <h1 id="logo">the able few</h1>
         <h2 id="tag">creative development from the Midcoast&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></h2>
-        <p class="visible-xs header_phone">STL: (314) 600-5473 | IAD: (317) 572-7083</p>
+        <p class="visible-xs header_phone">STL: <a href="tel:1-314-600-5473">(314) 600-5473</a> | IAD: <a href="tel:1-317-572-7083">(317) 572-7083</a></p>
       </div>
     </div>
   </div>
