Formatted phone numbers in footer.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="jumbo-content">
         <h1 id="logo">the able few</h1>
         <h2 id="tag">creative development from the Midcoast&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></h2>
-        <p class="visible-xs header_phone">STL: <a href="tel:1-314-600-5473">(314) 600-5473</a> | IAD: <a href="tel:1-317-572-7083">(317) 572-7083</a></p>
+        <p class="visible-xs header_phone">STL: <a href="tel:1-314-600-5473">(314) 600-5473</a> | IND: <a href="tel:1-317-572-7083">(317) 572-7083</a></p>
       </div>
     </div>
   </div>
@@ -169,9 +169,9 @@
     <div class="row">
       <div class="col-md-3">
         <h3>Saint Louis, MO</h3>
-        <p class="able_phone">(314) 600-5473</p>
+        <p class="able_phone"><a href="tel:1-314-600-5473">(314) 600-5473</a></p>
         <h3>Indianapolis, IN</h3>
-        <p class="able_phone">(317) 572-7083</p>
+        <p class="able_phone"><a href="tel:1-317-572-7083">(317) 572-7083</a></p>
         <p class="able_email"><a href="mailto:info@theablefew.com" target="_blank">info[at]theablefew[dot]com</a></p>
       </div>
       <div class="col-md-9">
