--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <script src="js/vendor/prefixfree.min.js"></script>
 
@@ -202,7 +203,7 @@
 
   <div class="container">
     <footer>
-      <p>&copy; The Able Few 2014</p>
+      <p>&copy; The Able Few 2014&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://github.com/theablefew" target="_blank"><i class="fa fa-github-alt"></i></a>&nbsp;&nbsp;<a href="http://twitter.com/theablefew" target="_blank"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;<a href="http://facebook.com/theablefew" target="_blank"><i class="fa fa-facebook"></i></a></p>
     </footer>
   </div> <!-- /container -->
 </div>
