Trying smaller service name for ES.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <p>Whether you would like us to start a brand new project with you, or support your existing application, we consistently deliver products that push the boundaries of what is possible.</p>
       </div>
       <div class="col-md-4">
-        <h2>Elasticsearch Consulting</h2>
+        <h2>Elasticsearch Support</h2>
         <p>With great experience in wielding massive database clusters that contain billions of records (and counting), we can help you dramatically improve how you manage and utilize Elasticsearch for your own projects.</p>
       </div>
     </div>
