Quick changes from Spencer.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="container" id="open_source">
     <div class="row">
       <div class="col-md-12">
-        <p class="lead-in">While we are always open to new types of adventure, perhaps we could partner wih you on one or more of the following things?&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        <p class="lead-in">While we are always open to new types of adventure, perhaps we could partner with you on one or more of the following things?&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
       </div>
     </div>
     <div class="row">
@@ -175,7 +175,7 @@
         <p class="able_phone"><a href="tel:1-317-572-7083">(317) 572-7083</a></p>
         <p class="able_email"><a href="mailto:info@theablefew.com" target="_blank">info[at]theablefew[dot]com</a></p>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-6">
         <form role="form">
           <div class="form-group">
             <label for="email">Name</label>
