Made project photos BW. Adjusted type for team section. Adjusted transitions for team section. Changed way bold fonts were being handled.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
-  <script src="js/vendor/prefixfree.min.js"></script>
 
   <!--[if lt IE 9]>
             <script src="js/vendor/html5-3.6-respond-1.1.0.min.js"></script>
@@ -39,7 +38,7 @@
   <div class="container" id="about">
     <div class="row">
       <div class="col-md-12">
-        <p class="lead-in">The Able Few provides technology consulting for early stage startups and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data using <strong>Ruby on Rails</strong>, <strong>Storm</strong>, and <strong>Elasticsearch</strong>.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        <p class="lead-in">The Able Few provides technology consulting in <strong>Ruby on Rails</strong>, <strong>Storm</strong>, and <strong>Elasticsearch</strong> and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
       </div>
     </div>
 
@@ -48,25 +47,25 @@
         <div class="member">
           <img src="http://yix.io/images/jasenka-shot.gif">
         </div>
-        <h4>Spencer Markowski <small>Partner</small></h4>
+        <h4>Spencer Markowski <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i>IND</span></h4>
       </div>
       <div class="col-md-3">
         <div class="member">
           <img src="http://yix.io/images/jenny-shot.gif">
         </div>
-        <h4>Iouri Kostine <small>Partner</small></h4>
+        <h4>Iouri Kostine <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i>STL</span></h4>
       </div>
       <div class="col-md-3">
         <div class="member">
           <img src="http://yix.io/images/tiffany-shot.gif">
         </div>
-        <h4>Michael Tomko <small>Production Director</small></h4>
+        <h4>Michael Tomko <small>Production Director</small> <span class="residence"><i class="fa fa-map-marker"></i>STL</span></h4>
       </div>
       <div class="col-md-3">
         <div class="member">
           <img src="http://yix.io/images/jostin-shot.gif">
         </div>
-        <h4>Jason Luebke <small>UX/JavaScript</small></h4>
+        <h4>Jason Luebke <small>UX/JavaScript</small> <span class="residence"><i class="fa fa-map-marker"></i>IND</span></h4>
       </div>
     </div>
   </div>
@@ -106,37 +105,37 @@
     <div class="row projects">
       <div class="col-md-2">
         <div class="member">
-          <img src="img/projects1.jpg">
+          <img src="img/projects1bw.jpg">
         </div>
         <br />
       </div>
       <div class="col-md-2">
         <div class="member">
-          <img src="img/projects2.jpg">
+          <img src="img/projects2bw.jpg">
         </div>
         <br />
       </div>
       <div class="col-md-2">
         <div class="member">
-          <img src="img/projects3.jpg">
+          <img src="img/projects3bw.jpg">
         </div>
         <br />
       </div>
       <div class="col-md-2">
         <div class="member">
-          <img src="img/projects4.jpg">
+          <img src="img/projects4bw.jpg">
         </div>
         <br />
       </div>
       <div class="col-md-2">
         <div class="member">
-          <img src="img/projects5.jpg">
+          <img src="img/projects5bw.jpg">
         </div>
         <br />
       </div>
       <div class="col-md-2">
         <div class="member">
-          <img src="img/projects6.jpg">
+          <img src="img/projects6bw.jpg">
         </div>
         <br />
       </div>
