Hiding 5 of the 6 project photos on xs/sm screens.

--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
       </div>
     </div>
     <div class="row projects">
-      <div class="col-md-2">
+      <div class="col-md-2 hidden-xs hidden-sm">
         <div class="member">
           <img src="img/projects1bw.jpg">
         </div>
         <br />
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 hidden-xs hidden-sm">
         <div class="member">
           <img src="img/projects2bw.jpg">
         </div>
@@ -121,19 +121,19 @@
         </div>
         <br />
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 hidden-xs hidden-sm">
         <div class="member">
           <img src="img/projects4bw.jpg">
         </div>
         <br />
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 hidden-xs hidden-sm">
         <div class="member">
           <img src="img/projects5bw.jpg">
         </div>
         <br />
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 hidden-xs hidden-sm">
         <div class="member">
           <img src="img/projects6bw.jpg">
         </div>
