--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
     <div class="row team">
       <div class="col-md-3">
         <div class="member">
-          <img src="http://yix.io/images/jasenka-shot.gif">
+          <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
         </div>
         <h4>Spencer Markowski <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i>IND</span></h4>
       </div>
       <div class="col-md-3">
         <div class="member">
-          <img src="http://yix.io/images/jenny-shot.gif">
+          <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
         </div>
         <h4>Iouri Kostine <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i>STL</span></h4>
       </div>
       <div class="col-md-3">
         <div class="member">
-          <img src="http://yix.io/images/tiffany-shot.gif">
+          <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
         </div>
         <h4>Michael Tomko <small>Production Director</small> <span class="residence"><i class="fa fa-map-marker"></i>STL</span></h4>
       </div>
       <div class="col-md-3">
         <div class="member">
-          <img src="http://yix.io/images/jostin-shot.gif">
+          <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
         </div>
         <h4>Jason Luebke <small>UX/JavaScript</small> <span class="residence"><i class="fa fa-map-marker"></i>IND</span></h4>
       </div>
