Reduced project image file size. Added meta title/description.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>the able few</title>
-  <meta name="description" content="">
+  <title>the able few | elasticsearch and ruby on rails consulting</title>
+  <meta name="description" content="The Able Few provides technology consulting for startups in Ruby on Rails, Storm, and Elasticsearch.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv='x-dns-prefetch-control' content='on'>
   <link rel='dns-prefetch' href='//maxcdn.bootstrapcdn.com'>
@@ -105,37 +105,37 @@
     <div class="row projects">
       <div class="col-md-2 hidden-xs hidden-sm">
         <div class="member">
-          <img src="img/projects1bw.jpg">
+          <img src="img/projects1bw2.jpg">
         </div>
         <br />
       </div>
       <div class="col-md-2 hidden-xs hidden-sm">
         <div class="member">
-          <img src="img/projects2bw.jpg">
+          <img src="img/projects2bw2.jpg">
         </div>
         <br />
       </div>
       <div class="col-md-2">
         <div class="member">
-          <img src="img/projects3bw.jpg">
+          <img src="img/projects3bw2.jpg">
         </div>
         <br />
       </div>
       <div class="col-md-2 hidden-xs hidden-sm">
         <div class="member">
-          <img src="img/projects4bw.jpg">
+          <img src="img/projects4bw2.jpg">
         </div>
         <br />
       </div>
       <div class="col-md-2 hidden-xs hidden-sm">
         <div class="member">
-          <img src="img/projects5bw.jpg">
+          <img src="img/projects5bw2.jpg">
         </div>
         <br />
       </div>
       <div class="col-md-2 hidden-xs hidden-sm">
         <div class="member">
-          <img src="img/projects6bw.jpg">
+          <img src="img/projects6bw2.jpg">
         </div>
         <br />
       </div>
