Facebook meta data.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>the able few | elasticsearch and ruby on rails consulting</title>
-  <meta name="description" content="The Able Few provides technology consulting for startups in Ruby on Rails, Storm, and Elasticsearch.">
+  <title>The Able Few | Elasticsearch and Ruby on Rails Consulting</title>
+  <meta name="description" content="The Able Few provides technology consulting in Ruby on Rails, Storm, and Elasticsearch and is based in St. Louis, MO and Indianapolis, IN.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv='x-dns-prefetch-control' content='on'>
   <link rel='dns-prefetch' href='//maxcdn.bootstrapcdn.com'>
+
+  <meta property="og:title" content="The Able Few | Elasticsearch and Ruby on Rails Consulting" />
+  <meta property="og:site_name" content="The Able Few"/>
+  <meta property="og:url" content="http://theablefew.com" />
+  <meta property="og:description" content="The Able Few provides technology consulting in Ruby on Rails, Storm, and Elasticsearch and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data." />
+  <meta property="og:type" content="website" />
+  <meta property="fb:app_id" content="330382707086328" />
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
