--- a/index.html
+++ b/index.html
@@ -41,180 +41,184 @@
       </div>
     </div>
   </div>
-<div class="wrapper">
-  <div class="container" id="about">
-    <div class="row">
-      <div class="col-md-12">
-        <p class="lead-in">The Able Few provides technology consulting in <strong>Ruby on Rails</strong>, <strong>Storm</strong>, and <strong>Elasticsearch</strong> and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+  <div class="wrapper">
+    <div class="container" id="about">
+      <div class="row">
+        <div class="col-md-12">
+          <p class="lead-in">The Able Few provides technology consulting in <strong>Ruby on Rails</strong>, <strong>Storm</strong>, and <strong>Elasticsearch</strong> and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        </div>
       </div>
-    </div>
 
-    <div class="row team">
-      <div class="col-md-3">
-        <div class="member">
-          <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
-        </div>
-        <h4>Spencer Markowski <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i> IND</span></h4>
-      </div>
-      <div class="col-md-3">
-        <div class="member">
-          <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
-        </div>
-        <h4>Iouri Kostine <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i> STL</span></h4>
-      </div>
-      <div class="col-md-3">
-        <div class="member">
-          <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
-        </div>
-        <h4>Michael Tomko <small>Production Director</small> <span class="residence"><i class="fa fa-map-marker"></i> STL</span></h4>
-      </div>
-      <div class="col-md-3">
-        <div class="member">
-          <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
-        </div>
-        <h4>Jason Luebke <small>UX/JavaScript</small> <span class="residence"><i class="fa fa-map-marker"></i> IND</span></h4>
-      </div>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container" id="open_source">
-    <div class="row">
-      <div class="col-md-12">
-        <p class="lead-in">While we are always open to new types of adventure, perhaps we could partner with you on one or more of the following things?&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-        <h2>Technology Consulting</h2>
-        <p>For the bulk of our customers we serve as their entire technology team on an on-going basis. We help design their products, architect complex solutions to their problems, and advocate on their behalf with other partners and vendors.</p>
-      </div>
-      <div class="col-md-4">
-        <h2>Custom Software</h2>
-        <p>Whether you would like us to start a brand new project with you, or support your existing application, we consistently deliver products that push the boundaries of what is possible.</p>
-      </div>
-      <div class="col-md-4">
-        <h2>Elasticsearch Support</h2>
-        <p>With great experience in wielding massive database clusters that contain billions of records (and counting), we can help you dramatically improve how you manage and utilize Elasticsearch for your own projects.</p>
-      </div>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container" id="open_source">
-    <div class="row">
-      <div class="col-md-12">
-        <p class="lead-in">A lot of what we do, at one time, seemed impossible. We do our best to give back where we can.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
-      </div>
-    </div>
-    <div class="row projects">
-      <div class="col-md-2 hidden-xs hidden-sm">
-        <div class="member">
-          <img src="img/projects1bw2.jpg">
-        </div>
-        <br />
-      </div>
-      <div class="col-md-2 hidden-xs hidden-sm">
-        <div class="member">
-          <img src="img/projects2bw2.jpg">
-        </div>
-        <br />
-      </div>
-      <div class="col-md-2">
-        <div class="member">
-          <img src="img/projects3bw2.jpg">
-        </div>
-        <br />
-      </div>
-      <div class="col-md-2 hidden-xs hidden-sm">
-        <div class="member">
-          <img src="img/projects4bw2.jpg">
-        </div>
-        <br />
-      </div>
-      <div class="col-md-2 hidden-xs hidden-sm">
-        <div class="member">
-          <img src="img/projects5bw2.jpg">
-        </div>
-        <br />
-      </div>
-      <div class="col-md-2 hidden-xs hidden-sm">
-        <div class="member">
-          <img src="img/projects6bw2.jpg">
-        </div>
-        <br />
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3">
-        <h2><a href="https://github.com/theablefew/locutus" target="_blank">Locutus</a></h2>
-        <p>JavaScript-based engine to render the DOM in canvas.</p>
-      </div>
-      <div class="col-md-3">
-        <h2><a href="https://github.com/theablefew/porcelain" target="_blank">Porcelain</a></h2>
-        <p>Dead-simple chart rendering API for D3.js with self-discovering DOM elements.</p>
-      </div>
-      <div class="col-md-3">
-        <h2><a href="https://github.com/theablefew/goodyear" target="_blank">Goodyear</a></h2>
-        <p>An ActiveRecord-like query interface for Elasticsearch.</p>
-      </div>
-      <div class="col-md-3">
-        <h2><a href="https://github.com/theablefew/gnip-rules" target="_blank">Gnip Rules</a></h2>
-        <p>A quick and easy way to manage your rules via Gnip Rules API.</p>
-      </div>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container" id="contact">
-    <div class="row">
-      <div class="col-md-12">
-        <p class="lead-in">Need someone to talk to? We are here for you.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3">
-        <h3>Saint Louis, MO</h3>
-        <p class="able_phone"><a href="tel:1-314-600-5473">(314) 600-5473</a></p>
-        <h3>Indianapolis, IN</h3>
-        <p class="able_phone"><a href="tel:1-317-572-7083">(317) 572-7083</a></p>
-        <p class="able_email"><a href="mailto:info@theablefew.com" target="_blank">info[at]theablefew[dot]com</a></p>
-      </div>
-      <div class="col-md-6">
-        <form role="form">
-          <div class="form-group">
-            <label for="email">Name</label>
-            <input type="text" class="form-control" id="email" placeholder="Name please.">
+      <div class="row team">
+        <div class="col-md-3">
+          <div class="member">
+            <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
           </div>
-          <div class="form-group">
-            <label for="name">Email Address</label>
-            <input type="email" class="form-control" id="email" placeholder="Email please.">
+          <h4>Spencer Markowski <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i> IND</span></h4>
+        </div>
+        <div class="col-md-3">
+          <div class="member">
+            <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
           </div>
-          <div class="form-group">
-            <label for="phone">Phone Number</label>
-            <input type="text" class="form-control" id="phone" placeholder="Digits please.">
+          <h4>Iouri Kostine <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i> STL</span></h4>
+        </div>
+        <div class="col-md-3">
+          <div class="member">
+            <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
           </div>
-          <div class="form-group">
-            <label for="body">What's on your mind?</label>
-            <textarea class="form-control" rows="3" id="body" placeholder="Do tell…"></textarea>
+          <h4>Michael Tomko <small>Production Director</small> <span class="residence"><i class="fa fa-map-marker"></i> STL</span></h4>
+        </div>
+        <div class="col-md-3">
+          <div class="member">
+            <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
           </div>
-          <button type="submit" class="btn btn-default btn-block">Send</button>
-        </form>
+          <h4>Jason Luebke <small>UX/JavaScript</small> <span class="residence"><i class="fa fa-map-marker"></i> IND</span></h4>
+        </div>
       </div>
     </div>
+
+    <hr>
+
+    <div class="container" id="open_source">
+      <div class="row">
+        <div class="col-md-12">
+          <p class="lead-in">While we are always open to new types of adventure, perhaps we could partner with you on one or more of the following things?&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Technology Consulting</h2>
+          <p>For the bulk of our customers we serve as their entire technology team on an on-going basis. We help design their products, architect complex solutions to their problems, and advocate on their behalf with other partners and vendors.</p>
+        </div>
+        <div class="col-md-4">
+          <h2>Custom Software</h2>
+          <p>Whether you would like us to start a brand new project with you, or support your existing application, we consistently deliver products that push the boundaries of what is possible.</p>
+        </div>
+        <div class="col-md-4">
+          <h2>Elasticsearch Support</h2>
+          <p>With great experience in wielding massive database clusters that contain billions of records (and counting), we can help you dramatically improve how you manage and utilize Elasticsearch for your own projects.</p>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="container" id="open_source">
+      <div class="row">
+        <div class="col-md-12">
+          <p class="lead-in">A lot of what we do, at one time, seemed impossible. We do our best to give back where we can.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        </div>
+      </div>
+      <div class="row projects">
+        <div class="col-md-2 hidden-xs hidden-sm">
+          <div class="member">
+            <img src="img/projects1bw2.jpg">
+          </div>
+          <br />
+        </div>
+        <div class="col-md-2 hidden-xs hidden-sm">
+          <div class="member">
+            <img src="img/projects2bw2.jpg">
+          </div>
+          <br />
+        </div>
+        <div class="col-md-2">
+          <div class="member">
+            <img src="img/projects3bw2.jpg">
+          </div>
+          <br />
+        </div>
+        <div class="col-md-2 hidden-xs hidden-sm">
+          <div class="member">
+            <img src="img/projects4bw2.jpg">
+          </div>
+          <br />
+        </div>
+        <div class="col-md-2 hidden-xs hidden-sm">
+          <div class="member">
+            <img src="img/projects5bw2.jpg">
+          </div>
+          <br />
+        </div>
+        <div class="col-md-2 hidden-xs hidden-sm">
+          <div class="member">
+            <img src="img/projects6bw2.jpg">
+          </div>
+          <br />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3">
+          <h2><a href="https://github.com/theablefew/locutus" target="_blank">Locutus</a></h2>
+          <p>JavaScript-based engine to render the DOM in canvas.</p>
+        </div>
+        <div class="col-md-3">
+          <h2><a href="https://github.com/theablefew/porcelain" target="_blank">Porcelain</a></h2>
+          <p>Dead-simple chart rendering API for D3.js with self-discovering DOM elements.</p>
+        </div>
+        <div class="col-md-3">
+          <h2><a href="https://github.com/theablefew/goodyear" target="_blank">Goodyear</a></h2>
+          <p>An ActiveRecord-like query interface for Elasticsearch.</p>
+        </div>
+        <div class="col-md-3">
+          <h2><a href="https://github.com/theablefew/gnip-rules" target="_blank">Gnip Rules</a></h2>
+          <p>A quick and easy way to manage your rules via Gnip Rules API.</p>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="container" id="contact">
+      <div class="row">
+        <div class="col-md-12">
+          <p class="lead-in">Need someone to talk to? We are here for you.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3">
+          <h3>Saint Louis, MO</h3>
+          <p class="able_phone"><a href="tel:1-314-600-5473">(314) 600-5473</a></p>
+          <h3>Indianapolis, IN</h3>
+          <p class="able_phone"><a href="tel:1-317-572-7083">(317) 572-7083</a></p>
+          <p class="able_email"><a href="mailto:info@theablefew.com" target="_blank">info[at]theablefew[dot]com</a></p>
+        </div>
+        <div class="col-md-6">
+          <form role="form" action="https://docs.google.com/forms/d/1EPnzhS8383_7U5V4C1P2vhPdVpwRoCdH0gfSWYpdolQ/formResponse" method="GET">
+            <div class="form-group">
+              <label for="entry.1321014021">Name</label>
+              <input type="text" name="entry.1321014021" id="entry_1321014021" class="form-control" placeholder="Name, please…">
+            </div>
+            <div class="form-group">
+              <label for="entry.250862720">Company</label>
+              <input type="text" name="entry.250862720" id="entry_250862720" class="form-control" placeholder="Company, please…">
+            </div>
+            <div class="form-group">
+              <label for="entry.1413301004">Email Address</label>
+              <input type="email" class="form-control" name="entry.1413301004" id="entry_1413301004" placeholder="Email, please…">
+            </div>
+            <div class="form-group">
+              <label for="entry.2026046157">Phone Number</label>
+              <input type="tel" class="form-control" name="entry.2026046157" id="entry_2026046157" placeholder="Digits, please…">
+            </div>
+            <div class="form-group">
+              <label for="entry.354595247">What's on your mind?</label>
+              <textarea class="form-control" rows="3" name="entry.354595247" id="entry_354595247" placeholder="Do tell…"></textarea>
+            </div>
+            <button type="submit" class="btn btn-default btn-block">Send</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="container">
+      <footer>
+        <p>&copy; The Able Few 2014&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://github.com/theablefew" target="_blank"><i class="fa fa-github-alt"></i></a>&nbsp;&nbsp;<a href="http://twitter.com/theablefew" target="_blank"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;<a href="http://facebook.com/theablefew" target="_blank"><i class="fa fa-facebook"></i></a></p>
+      </footer>
+    </div> <!-- /container -->
   </div>
-
-  <hr>
-
-  <div class="container">
-    <footer>
-      <p>&copy; The Able Few 2014&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://github.com/theablefew" target="_blank"><i class="fa fa-github-alt"></i></a>&nbsp;&nbsp;<a href="http://twitter.com/theablefew" target="_blank"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;<a href="http://facebook.com/theablefew" target="_blank"><i class="fa fa-facebook"></i></a></p>
-    </footer>
-  </div> <!-- /container -->
-</div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
   <script src="js/vendor/jquery.fittext.js"></script>
