--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="row team">
         <div class="col-md-3">
           <div class="member">
-            <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
+            <img src="img/spencer.gif" width="310" height="407">
           </div>
           <h4>Spencer Markowski <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i> IND</span></h4>
         </div>
@@ -70,9 +70,9 @@
         </div>
         <div class="col-md-3">
           <div class="member">
-            <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
+            <img src="img/jason.gif" width="310" height="407">
           </div>
-          <h4>Jason Luebke <small>UX/JavaScript</small> <span class="residence"><i class="fa fa-map-marker"></i> IND</span></h4>
+          <h4>Jason Luebke <small>UX / JavaScript</small> <span class="residence"><i class="fa fa-map-marker"></i> IND</span></h4>
         </div>
       </div>
     </div>
@@ -106,7 +106,24 @@
     <div class="container" id="open_source">
       <div class="row">
         <div class="col-md-12">
-          <p class="lead-in">A lot of what we do, at one time, seemed impossible. We do our best to give back where we can.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+          <p class="lead-in">For <strong>Fizziology</strong>, we help them to consume billions of social media messages and continously develop tools for their analysts to gain access to insight from such a big sea of data.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="member">
+            <img src="img/fizz4.gif">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="container" id="open_source">
+      <div class="row">
+        <div class="col-md-12">
+          <p class="lead-in">A lot of what we do, at one time, seemed impossible. We do our best to give back where we can. <a href="http://github.com/theablefew" target="_blank"><i class="fa fa-github-alt"></i></a>&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
         </div>
       </div>
       <div class="row projects">
@@ -148,19 +165,15 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3">
-          <h2><a href="https://github.com/theablefew/locutus" target="_blank">Locutus</a></h2>
-          <p>JavaScript-based engine to render the DOM in canvas.</p>
-        </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <h2><a href="https://github.com/theablefew/porcelain" target="_blank">Porcelain</a></h2>
           <p>Dead-simple chart rendering API for D3.js with self-discovering DOM elements.</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <h2><a href="https://github.com/theablefew/goodyear" target="_blank">Goodyear</a></h2>
           <p>An ActiveRecord-like query interface for Elasticsearch.</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <h2><a href="https://github.com/theablefew/gnip-rules" target="_blank">Gnip Rules</a></h2>
           <p>A quick and easy way to manage your rules via Gnip Rules API.</p>
         </div>
@@ -184,27 +197,28 @@
           <p class="able_email"><a href="mailto:info@theablefew.com" target="_blank">info[at]theablefew[dot]com</a></p>
         </div>
         <div class="col-md-6">
-          <form role="form" action="https://docs.google.com/forms/d/1EPnzhS8383_7U5V4C1P2vhPdVpwRoCdH0gfSWYpdolQ/formResponse" method="GET">
+          <form role="form" action="//forms.brace.io/tomko@theablefew.com" method="post">
             <div class="form-group">
-              <label for="entry.1321014021">Name</label>
-              <input type="text" name="entry.1321014021" id="entry_1321014021" class="form-control" placeholder="Name, please…">
+              <label for="name">Name</label>
+              <input type="text" name="name" id="name" class="form-control" placeholder="Name, please…">
             </div>
             <div class="form-group">
-              <label for="entry.250862720">Company</label>
-              <input type="text" name="entry.250862720" id="entry_250862720" class="form-control" placeholder="Company, please…">
+              <label for="email">Company</label>
+              <input type="text" name="company" id="company" class="form-control" placeholder="Company, please…">
             </div>
             <div class="form-group">
-              <label for="entry.1413301004">Email Address</label>
-              <input type="email" class="form-control" name="entry.1413301004" id="entry_1413301004" placeholder="Email, please…">
+              <label for="_replyto">Email Address</label>
+              <input type="email" class="form-control" name="_replyto" id="_replyto" placeholder="Email, please…">
             </div>
             <div class="form-group">
-              <label for="entry.2026046157">Phone Number</label>
-              <input type="tel" class="form-control" name="entry.2026046157" id="entry_2026046157" placeholder="Digits, please…">
+              <label for="phone">Phone Number</label>
+              <input type="tel" class="form-control" name="phone" id="phone" placeholder="Digits, please…">
             </div>
             <div class="form-group">
-              <label for="entry.354595247">What's on your mind?</label>
-              <textarea class="form-control" rows="3" name="entry.354595247" id="entry_354595247" placeholder="Do tell…"></textarea>
+              <label for="body">What's on your mind?</label>
+              <textarea class="form-control" rows="3" name="body" id="body" placeholder="Do tell…"></textarea>
             </div>
+            <input type="hidden" name="_next" value="//trying.dev" />
             <button type="submit" class="btn btn-default btn-block">Send</button>
           </form>
         </div>
