--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="member">
-            <img src="img/fizz4.gif">
+            <img src="img/fizz.gif">
           </div>
         </div>
       </div>
