--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
   </div>
   <div class="wrapper">
-    <div class="container" id="about">
+    <div class="container padded" id="about">
       <div class="row">
         <div class="col-md-12">
           <p class="lead-in">The Able Few provides technology consulting in <strong>Ruby on Rails</strong>, <strong>Storm</strong>, and <strong>Elasticsearch</strong> and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
@@ -79,7 +79,7 @@
 
     <hr>
 
-    <div class="container" id="open_source">
+    <div class="container padded" id="open_source">
       <div class="row">
         <div class="col-md-12">
           <p class="lead-in">While we are always open to new types of adventure, perhaps we could partner with you on one or more of the following things?&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
@@ -103,10 +103,27 @@
 
     <hr>
 
-    <div class="container" id="open_source">
+    <div class="container padded">
       <div class="row">
         <div class="col-md-12">
-          <p class="lead-in">For <strong>Fizziology</strong>, we help them to consume billions of social media messages and continously develop tools for their analysts to gain access to insight from such a big sea of data.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+          <p class="lead-in">Businesses from early stage startups to publicly traded companies have turned to The Able few to help them solve their toughest challenges.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="member">
+            <img src="img/misc.gif">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="container padded">
+      <div class="row">
+        <div class="col-md-12">
+          <p class="lead-in">The Able Few develops platforms that facilitate sustained thinking and yield unlimited access to insight.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
         </div>
       </div>
       <div class="row">
@@ -120,7 +137,24 @@
 
     <hr>
 
-    <div class="container" id="open_source">
+    <div class="container padded">
+      <div class="row">
+        <div class="col-md-12">
+          <p class="lead-in"><strong>Click With Me Now</strong> has built their business on top of our Locutus in-browser rendering engine. <strong>Fizziology's</strong> analysts depend on our technology to mine the billions of Twitter and Facebook messages for unique insights.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="member">
+            <img src="img/cwmn.gif">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="container padded" id="open_source">
       <div class="row">
         <div class="col-md-12">
           <p class="lead-in">A lot of what we do, at one time, seemed impossible. We do our best to give back where we can. <a href="http://github.com/theablefew" target="_blank"><i class="fa fa-github-alt"></i></a>&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
@@ -182,7 +216,7 @@
 
     <hr>
 
-    <div class="container" id="contact">
+    <div class="container padded" id="contact">
       <div class="row">
         <div class="col-md-12">
           <p class="lead-in">Need someone to talk to? We are here for you.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
