Fixed grey bar on header.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
   </div>
   <div class="wrapper">
-    <div class="container padded" id="about">
+    <div class="container" id="about">
       <div class="row">
         <div class="col-md-12">
           <p class="lead-in">The Able Few provides technology consulting in <strong>Ruby on Rails</strong>, <strong>Storm</strong>, and <strong>Elasticsearch</strong> and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
