--- a/index.html
+++ b/index.html
@@ -106,47 +106,13 @@
     <div class="container padded">
       <div class="row">
         <div class="col-md-12">
-          <p class="lead-in">Businesses from early stage startups to publicly traded companies have turned to The Able few to help them solve their toughest challenges.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+          <p class="lead-in">Businesses from early stage startups to publicly traded companies have turned to The Able few to help them solve their toughest challenges. <strong>Click With Me Now</strong> has built their business on top of our Locutus in-browser rendering engine. <strong>Fizziology's</strong> analysts depend on our technology to mine the billions of Twitter and Facebook messages for unique insights.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="member">
-            <img src="img/misc.gif">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <hr>
-
-    <div class="container padded">
-      <div class="row">
-        <div class="col-md-12">
-          <p class="lead-in">The Able Few develops platforms that facilitate sustained thinking and yield unlimited access to insight.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="member">
-            <img src="img/fizz.gif">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <hr>
-
-    <div class="container padded">
-      <div class="row">
-        <div class="col-md-12">
-          <p class="lead-in"><strong>Click With Me Now</strong> has built their business on top of our Locutus in-browser rendering engine. <strong>Fizziology's</strong> analysts depend on our technology to mine the billions of Twitter and Facebook messages for unique insights.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="member">
-            <img src="img/cwmn.gif">
+            <img src="img/comp.gif">
           </div>
         </div>
       </div>
