--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
       <div class="row team">
         <div class="col-md-3">
           <div class="member">
-            <img src="img/spencer.gif" width="310" height="407">
+            <img src="img/spencer2.gif" width="310" height="407">
           </div>
           <h4>Spencer Markowski <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i> IND</span></h4>
         </div>
         <div class="col-md-3">
           <div class="member">
-            <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
+            <img src="img/iouri.gif">
           </div>
           <h4>Iouri Kostine <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i> STL</span></h4>
         </div>
         <div class="col-md-3">
           <div class="member">
-            <img src="https://s3.amazonaws.com/uploads.hipchat.com/14761/54296/Xwjxfnh672E0yb8/spencer.gif">
+            <img src="img/tomko.gif">
           </div>
           <h4>Michael Tomko <small>Production Director</small> <span class="residence"><i class="fa fa-map-marker"></i> STL</span></h4>
         </div>
@@ -106,7 +106,7 @@
     <div class="container padded">
       <div class="row">
         <div class="col-md-12">
-          <p class="lead-in">Businesses from early stage startups to publicly traded companies have turned to The Able few to help them solve their toughest challenges. <strong>Click With Me Now</strong> has built their business on top of our Locutus in-browser rendering engine. <strong>Fizziology's</strong> analysts depend on our technology to mine the billions of Twitter and Facebook messages for unique insights.&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
+          <p class="lead-in">Businesses from early stage startups to publicly traded companies have turned to The Able few to help them solve their toughest challenges. &nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-down more"></span></p>
         </div>
       </div>
       <div class="row">
@@ -116,6 +116,7 @@
           </div>
         </div>
       </div>
+      <br />
     </div>
 
     <hr>
