Added first frame placeholder and lazy load script for team members.

--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
       <div class="row team">
         <div class="col-md-3">
           <div class="member">
-            <img src="img/spencer2.gif" width="310" height="407">
+            <img src="img/spencer.png" data-gif="img/spencer.gif" width="310" height="407" alt="Spencer Markowski" title="Spencer Markowski">
           </div>
           <h4>Spencer Markowski <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i> IND</span></h4>
         </div>
         <div class="col-md-3">
           <div class="member">
-            <img src="img/iouri.gif">
+            <img src="img/iouri.png" data-gif="img/iouri.gif" width="310" height="407" alt="Iouri Kostine" title="Iouri Kostine">
           </div>
           <h4>Iouri Kostine <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i> STL</span></h4>
         </div>
         <div class="col-md-3">
           <div class="member">
-            <img src="img/tomko.gif">
+            <img src="img/tomko.png" data-gif="img/tomko.gif" width="310" height="407" alt="Michael Tomko" title="Michael Tomko">
           </div>
           <h4>Michael Tomko <small>Production Director</small> <span class="residence"><i class="fa fa-map-marker"></i> STL</span></h4>
         </div>
         <div class="col-md-3">
           <div class="member">
-            <img src="img/jason.gif" width="310" height="407">
+            <img src="img/jason.png" data-gif="img/jason.gif" width="310" height="407" alt="Jason Luebke" title="Jason Luebke">
           </div>
           <h4>Jason Luebke <small>UX / JavaScript</small> <span class="residence"><i class="fa fa-map-marker"></i> IND</span></h4>
         </div>
@@ -241,6 +241,12 @@
   <script>
     $("#logo").fitText(1.2, { minFontSize: '55px', maxFontSize: '100px' });
     $("#tag").fitText(2.2, { minFontSize: '15px', maxFontSize: '40px' });
+
+    $(window).load(function() {
+      $('img[data-gif]').attr("src", function(index) {
+        return $(this).attr('data-gif');
+      });
+    });
   </script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
