--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="member">
-            <img src="img/comp.gif">
+            <img src="img/comp.png" data-gif="img/comp.gif" width="900" height="400">
           </div>
         </div>
       </div>
