--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <meta name="description" content="The Able Few provides technology consulting in Ruby on Rails, Storm, and Elasticsearch and is based in St. Louis, MO and Indianapolis, IN.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv='x-dns-prefetch-control' content='on'>
-  <link rel='dns-prefetch' href='//maxcdn.bootstrapcdn.com'>
 
   <meta property="og:title" content="The Able Few | Elasticsearch and Ruby on Rails Consulting" />
   <meta property="og:site_name" content="The Able Few"/>
@@ -20,8 +19,7 @@
   <meta property="fb:app_id" content="330382707086328" />
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/style.min.css">
 
   <!--[if lt IE 9]>
             <script src="js/vendor/html5-3.6-respond-1.1.0.min.js"></script>
