--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="member">
-            <img src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== data-gif="img/comp.gif" width="900" height="400">
+            <img src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== data-giff="img/comp.gif" width="900" height="400">
           </div>
         </div>
       </div>
