--- a/index.html
+++ b/index.html
@@ -241,10 +241,6 @@
     $("#tag").fitText(2.2, { minFontSize: '15px', maxFontSize: '40px' });
 
     $(window).load(function() {
-      //$('div[data-gif-bg]').css("background-image", function(index) {
-      //  var src = $(this).attr('data-gif-bg');
-      //  return "url('"+ src + "')";
-      //});
       $('img[data-gif]').attr('src', function(index){
         return $(this).attr('data-gif');
       });
@@ -258,7 +254,7 @@
     e=o.createElement(i);r=o.getElementsByTagName(i)[0];
     e.src='//www.google-analytics.com/analytics.js';
     r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X');ga('send','pageview');
+    ga('create','UA-1532555-11');ga('send','pageview');
   </script>
 </body>
 </html>
