--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <meta property="og:description" content="The Able Few provides technology consulting in Ruby on Rails, Storm, and Elasticsearch and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data." />
   <meta property="og:type" content="website" />
   <meta property="fb:app_id" content="330382707086328" />
+  <link type="text/plain" rel="author" href="/humans.txt" />
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.min.css">
