Added img dimmensions to project.

--- a/index.html
+++ b/index.html
@@ -129,37 +129,37 @@
       <div class="row projects">
         <div class="col-md-2 hidden-xs hidden-sm">
           <div class="member">
-            <img src="img/projects1bw2.jpg">
+            <img src="img/projects1bw2.jpg" width="600" height="600">
           </div>
           <br />
         </div>
         <div class="col-md-2 hidden-xs hidden-sm">
           <div class="member">
-            <img src="img/projects2bw2.jpg">
+            <img src="img/projects2bw2.jpg" width="600" height="600">
           </div>
           <br />
         </div>
         <div class="col-md-2">
           <div class="member">
-            <img src="img/projects3bw2.jpg">
+            <img src="img/projects3bw2.jpg" width="600" height="600">
           </div>
           <br />
         </div>
         <div class="col-md-2 hidden-xs hidden-sm">
           <div class="member">
-            <img src="img/projects4bw2.jpg">
+            <img src="img/projects4bw2.jpg" width="600" height="600">
           </div>
           <br />
         </div>
         <div class="col-md-2 hidden-xs hidden-sm">
           <div class="member">
-            <img src="img/projects5bw2.jpg">
+            <img src="img/projects5bw2.jpg" width="600" height="600">
           </div>
           <br />
         </div>
         <div class="col-md-2 hidden-xs hidden-sm">
           <div class="member">
-            <img src="img/projects6bw2.jpg">
+            <img src="img/projects6bw2.jpg" width="600" height="600">
           </div>
           <br />
         </div>
