Added FB open graph image.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
   <meta property="og:title" content="The Able Few | Elasticsearch and Ruby on Rails Consulting" />
   <meta property="og:site_name" content="The Able Few"/>
-  <meta property="og:url" content="http://theablefew.com" />
   <meta property="og:description" content="The Able Few provides technology consulting in Ruby on Rails, Storm, and Elasticsearch and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data." />
   <meta property="og:type" content="website" />
   <meta property="fb:app_id" content="330382707086328" />
+  <meta property="og:image" content="img/able-mark-facebook-og-image" />
   <link type="text/plain" rel="author" href="/humans.txt" />
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
